Prefix, minify CSS and custom propertys

--- a/css/articles.css
+++ b/css/articles.css
@@ -1,3 +1,11 @@
+:root {
+    --accent-color: #fff;
+    --secondary-color: #000;
+    --content-color: #f6f6f6;
+    --outline-color: #7296ec;
+}
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -14,11 +22,11 @@ body {
     flex-direction: column;
     height: 100%;
     font-size: 16px;
-    font-family: 'Rubik', "Arial", sans-serif;
+    font-family: "Rubik", "Arial", sans-serif;
     font-weight: 400;
     line-height: 22px;
-    background-color: #fff;
-    color: #000;
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
 }
 
 .container {
@@ -34,7 +42,7 @@ a {
     display: inline-block;
     text-decoration: none;
     list-style: none;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 img {
@@ -44,7 +52,7 @@ img {
 
 /* OUTLINE */
 *:focus {
-    outline: 2px dashed #7296ec;
+    outline: 2px dashed var(--outline-color);
     outline-offset: 3px;
 }
 
@@ -78,12 +86,12 @@ img {
 
 .button-primary {
     background-color: #7296ec;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 .button-orandge {
     background-color:#f78b3b;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 /* Header */
@@ -91,7 +99,7 @@ img {
     padding-top: 30px;
     padding-bottom: 30px;
     margin-bottom: 10px;
-    background-color: #f6f6f6;
+    background-color: var(--content-color);
 }
 
 .site-header-top-container {
@@ -107,7 +115,7 @@ img {
     margin-right: 35px;
     padding: 8px 6px;
     border-radius: 7px;
-    background-color: #fff;
+    background-color: var(--accent-color);
 }
 
 .site-header-logo:hover {
@@ -175,8 +183,8 @@ img {
     text-decoration: none;
 }
 .lang-toggle-link-active {
-    background-color: #fff;
-    color: #000;
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
 }
 
 
@@ -254,7 +262,7 @@ img {
     font-weight: 500;
     line-height: 36px;
     margin-bottom: 20px;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .news-content-img {
@@ -268,7 +276,7 @@ img {
 .news-content-text {
     font-size: 20px;
     line-height: 30px;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .news-content-text:not(:last-child) {
@@ -295,14 +303,14 @@ img {
     margin-bottom: 10px;
     padding: 20px 17px 25px;
     border-radius: 15px;
-    background-color: #f6f6f6;
+    background-color: var(--content-color);
 }
 
 .main-content-heading {
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 25px;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .main-content-address {
@@ -340,7 +348,7 @@ img {
     margin-bottom: 20px;
     font-size: 24px;
     font-weight: 500;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .interest {
@@ -356,7 +364,7 @@ img {
     width: 393px;
     border-radius: 15px;
     padding: 20px 18px 15px 17px;
-    background-color: #f6f6f6;
+    background-color: var(--content-color);
 }
 
 .card-two {
@@ -376,7 +384,7 @@ img {
     margin-bottom: 10px;
     font-weight: 500;
     line-height: 1.5;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .interest-card-text {
@@ -421,7 +429,7 @@ footer {
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 15px;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 .footer-top {
@@ -435,7 +443,7 @@ footer {
     margin-right: 203px;
     font-size: 12px;
     line-height: 19px;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 .footer-top-list {
@@ -453,7 +461,7 @@ footer {
 
 .footer-nav-link {
     font-weight: 500;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 .footer-line {
@@ -468,7 +476,7 @@ footer {
 
 .footer-bottom-heading {
     font-size: 18px;
-    color: #fff;
+    color: var(--accent-color);
     font-weight: 500;
 }
 
