--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+:root {
+    --accent-color: #fff;
+    --secondary-color: #000;
+    --hover-color: #7296ec;
+    --bg-color: #f6f6f6;
+
+}
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -14,11 +23,11 @@ body {
     flex-direction: column;
     height: 100%;
     font-size: 16px;
-    font-family: 'Rubik', "Arial", sans-serif;
+    font-family: "Rubik", "Arial", sans-serif;
     font-weight: 400;
     line-height: 22px;
-    background-color: #fff;
-    color: #000;
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
 }
 
 .container {
@@ -34,7 +43,7 @@ a {
     display: inline-block;
     text-decoration: none;
     list-style: none;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 img {
@@ -44,7 +53,7 @@ img {
 
 /* OUTLINE */
 *:focus {
-    outline: 2px dashed #7296ec;
+    outline: 2px dashed var(--hover-color);
     outline-offset: 3px;
 }
 
@@ -77,13 +86,13 @@ img {
 }
 
 .button-primary {
-    background-color: #7296ec;
-    color: #fff;
+    background-color: var(--hover-color);
+    color: var(--accent-color);
 }
 
 .button-orandge {
-    background-color:#f78b3b;
-    color: #fff;
+    background-color: #f78b3b;
+    color: var(--accent-color);
 }
 
 /* Header */
@@ -91,7 +100,7 @@ img {
     padding-top: 30px;
     padding-bottom: 30px;
     margin-bottom: 10px;
-    background-color: #f6f6f6;
+    background-color: var(--bg-color);
 }
 
 .site-header-top-container {
@@ -107,14 +116,14 @@ img {
     margin-right: 35px;
     padding: 8px 6px;
     border-radius: 7px;
-    background-color: #fff;
+    background-color: var(--accent-color);
 }
 
 .site-header-logo:hover {
     opacity: 0.8;
 }
 
-.site-header-logo:active{
+.site-header-logo:active {
     opacity: 0.6;
 }
 
@@ -173,9 +182,10 @@ img {
     text-align: center;
     text-decoration: none;
 }
+
 .lang-toggle-link-active {
-    background-color: #fff;
-    color: #000;
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
 }
 
 
@@ -201,7 +211,7 @@ img {
     list-style: none;
 }
 
-.sitenav-item{
+.sitenav-item {
     margin-top: 4px;
     margin-bottom: 4px;
 }
@@ -216,7 +226,7 @@ img {
 }
 
 .sitenav-link:hover {
-    color: #7296ec;
+    color: var(--hover-color);
 }
 
 .sitenav-link:active {
@@ -255,7 +265,7 @@ img {
     margin-bottom: 10px;
     margin-right: 10px;
     border-radius: 15px;
-    background-color: #f6f6f6;
+    background-color: var(--bg-color);
 }
 
 .news-grid-title {
@@ -270,7 +280,7 @@ img {
 }
 
 .article-card-link:hover {
-    color: #7296ec;
+    color: var(--hover-color);
 }
 
 .article-card-link:active {
@@ -279,7 +289,7 @@ img {
 
 .article-card-text {
     margin-bottom: 15px;
-    color:#4a4b4c;
+    color: #4a4b4c;
 }
 
 .article-card-img {
@@ -336,11 +346,11 @@ img {
     font-size: 20px;
     line-height: 26px;
     font-weight: 500;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .notification-link {
-    color:#fff;
+    color: var(--accent-color);
     font-size: 20px;
     margin-right: 71px;
     padding: 13px 30px;
@@ -365,6 +375,7 @@ img {
     width: 393px;
     margin-top: 42px;
 }
+
 .layout-2-1-sidebar-item:not(:last-child) {
     margin-bottom: 10px;
 }
@@ -382,7 +393,7 @@ img {
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 20px;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .news-list {
@@ -406,7 +417,7 @@ img {
     align-items: flex-start;
     border-radius: 15px;
     padding: 20px 20px 20px 17px;
-    background-color: #f6f6f6;
+    background-color: var(--bg-color);
 }
 
 .news-item-img {
@@ -427,11 +438,11 @@ img {
     line-height: 1.5;
     font-weight: 500;
     margin-bottom: 5px;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .world-list-content-heading:hover {
-    color:#7296ec;
+    color: var(--hover-color);
 }
 
 .world-list-content-heading:active {
@@ -458,8 +469,8 @@ img {
 .sidebar-news-card {
     padding: 20px;
     border-radius: 15px;
-    background-color: #f6f6f6;
-    color: #000;
+    background-color: var(--bg-color);
+    color: var(--secondary-color);
 }
 
 .sidebar-news-card-heading {
@@ -467,7 +478,7 @@ img {
     font-weight: 500;
     line-height: 18px;
     margin-bottom: 25px;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .sidebar-news-card-list {
@@ -500,7 +511,7 @@ img {
 }
 
 .sidebar-news-card-link:hover {
-    color:#7296ec;
+    color: var(--hover-color);
 }
 
 .sidebar-news-card-link:active {
@@ -516,9 +527,10 @@ img {
 .sidebar-news-card-time:not(:last-child) {
     margin-bottom: 20px;
 }
+
 .sidebar-news-card-time {
     font-size: 13px;
-    color:#5e5f61;
+    color: #5e5f61;
 }
 
 
@@ -551,7 +563,7 @@ img {
 }
 
 .site-footer *:focus {
-    outline: 2px dashed #fff;
+    outline: 2px dashed var(--accent-color);
 }
 
 .site-footer-logo-wrapper {
@@ -587,7 +599,7 @@ img {
     margin-right: 200px;
     font-size: 12px;
     line-height: 19px;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 .footer-top-wrapper {
@@ -610,7 +622,7 @@ img {
 
 .footer-nav-link {
     font-weight: 500;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 .footer-line {
@@ -627,7 +639,7 @@ img {
     font-size: 18px;
     font-weight: 500;
     line-height: 23px;
-    color: #fff;
+    color: var(--accent-color);
 }
 
 .site-footer-socials-list {
@@ -688,8 +700,8 @@ img {
     padding: 20px 25px;
     margin: 0;
     border-radius: 10px;
-    background-color: #f6f6f6;
-    color: #000;
+    background-color: var(--bg-color);
+    color: var(--secondary-color);
 }
 
 .difinitions-card-item {
@@ -706,7 +718,7 @@ img {
     font-weight: 500;
     margin-bottom: 7px;
     line-height: normal;
-    color: #000;
+    color: var(--secondary-color);
 }
 
 .difinitions-card-value {
@@ -748,13 +760,12 @@ img {
 }
 
 /* RETINA BGS */
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (min-device-pixel-ratio: 2),
+only screen and (min-resolution: 192dpi),
+only screen and (min-resolution: 2dppx) {
     .notification-cta {
         background-image: url(../img/global-naticication-bg@2x.jpg);
     }
