--- a/css/articles.css
+++ b/css/articles.css
@@ -5,22 +5,24 @@
     --outline-color: #7296ec;
 }
 
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 html {
+    box-sizing: border-box;
     height: 100%;
     scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    margin: 0;
+    padding: 0;
     font-size: 16px;
     font-family: "Rubik", "Arial", sans-serif;
     font-weight: 400;
