--- a/css/list-style.css
+++ b/css/list-style.css
@@ -9,21 +9,24 @@
 }
 
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 html {
+    box-sizing: border-box;
     height: 100%;
     scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 body {
     display: flex;
     flex-direction: column;
     height: 100%;
+    margin: 0;
+    padding: 0;
     font-size: 16px;
     font-family: "Rubik", "Arial", sans-serif;
     font-weight: 400;
