--- a/css/articles.css
+++ b/css/articles.css
@@ -5,16 +5,15 @@
     --outline-color: #7296ec;
 }
 
-html {
+* {
     box-sizing: border-box;
-    height: 100%;
-    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
+html {
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
