--- a/css/list-style.css
+++ b/css/list-style.css
@@ -9,24 +9,21 @@
 }
 
 
-html {
+* {
     box-sizing: border-box;
-    height: 100%;
-    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
+html {
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 0;
-    padding: 0;
     font-size: 16px;
     font-family: "Rubik", "Arial", sans-serif;
     font-weight: 400;
