--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,21 @@
 }
 
 
-html {
+* {
     box-sizing: border-box;
-    height: 100%;
-    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
+html {
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 0;
-    padding: 0;
     font-size: 16px;
     font-family: "Rubik", "Arial", sans-serif;
     font-weight: 400;
@@ -197,6 +194,7 @@ img {
 .sitenav {
     padding-top: 12px;
     padding-bottom: 12px;
+    margin: 0;
     border-bottom: 1px solid #d1d1d1;
     font-size: 18px;
     font-weight: 500;
